src/objects/Training_Question__c.object
<CustomObject>
    <fields>
        <fullName>Correct_Answer_Index__c</fullName>
        <label>Correct Answer Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Training_Step__c</fullName>
        <label>Training Step</label>
        <referenceTo>Training_Step__c</referenceTo>
        <relationshipLabel>Training Questions</relationshipLabel>
        <relationshipName>Training_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Question</label>
    <nameField>
        <displayFormat>TQ-{000000}</displayFormat>
        <label>Training Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>